Style tweaks to rss link and overflow fix

--- a/css/index.css
+++ b/css/index.css
@@ -30,6 +30,7 @@ body {
   font-size: 18px;
   line-height: 1.45;
   font-weight: 400;
+  overflow-x: hidden;
 }
 p {
   margin-bottom: 1.15rem;
@@ -385,3 +386,19 @@ a[href].direct-link:focus:visited,
   }
 
 }
+
+a.rss {
+  float: right;
+  padding: 1em;
+  margin: .4em;
+  border: var(--lightgray) dashed 2px;
+  border-radius: 24px 24px 2px 24px;
+  transition: all 300ms ease-in-out;
+  color: var(--dustyblue);
+}
+
+a.rss:hover {
+  border-radius: 18px 18px 2px 18px;
+  color: var(--lightgray);
+}
+
